WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94568
REGRESSION(
r126127
): Build break on multiple platforms (Requested by tkent on #webkit).
https://bugs.webkit.org/show_bug.cgi?id=94568
Summary
REGRESSION(r126127): Build break on multiple platforms (Requested by tkent on...
WebKit Review Bot
Reported
2012-08-20 20:40:01 PDT
http://trac.webkit.org/changeset/126127
broke the build: Build break on multiple platforms (Requested by tkent on #webkit). This is an automatic bug report generated by the sheriff-bot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests case pain. "Only you can prevent forest fires." -- Smokey the Bear
Attachments
Patch
(2.00 KB, patch)
2012-08-20 20:54 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(1.95 KB, patch)
2012-08-20 20:55 PDT
,
Shinya Kawanaka
morrita
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-08-20 20:54:39 PDT
Created
attachment 159608
[details]
Patch
Shinya Kawanaka
Comment 2
2012-08-20 20:55:57 PDT
Created
attachment 159610
[details]
Patch
Shinya Kawanaka
Comment 3
2012-08-20 20:58:29 PDT
Committed
r126130
: <
http://trac.webkit.org/changeset/126130
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug