Regression(r126127): Build break on multiple platforms https://bugs.webkit.org/show_bug.cgi?id=94568

Reviewed by Hajime Morita.

Notation::cloneNode should also have ExceptionCode. We add it in this patch.

No new tests, no change in behavior.

* dom/Notation.cpp:
(WebCore::Notation::cloneNode):
* dom/Notation.h:
(Notation):

Canonical link: https://commits.webkit.org/112367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126130 268f45cc-cd09-0410-ab3c-d52691b4dbfc